# insureflow-ai

./: .dockerignore  .env.example  .gitignore  PROJECT_BLUEPRINT.md  PROJECT_MEMORY.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deployment-validation.yml  security-scan.yml
ai-services/: README.md
ai-services/document-intelligence-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-services/document-intelligence-service/document_intelligence/: __init__.py  app.py  audit.py  prompts.py  provider.py  schemas.py  service.py
ai-services/document-intelligence-service/tests/: test_api.py  test_service.py
ai-services/rag-service/: Dockerfile  README.md  pyproject.toml
ai-services/rag-service/rag_service/: __init__.py  answering.py  app.py  audit.py  chunking.py  retrieval.py  schemas.py  service.py  store.py
ai-services/rag-service/tests/: test_api.py  test_retrieval.py
ai-services/triage-service/: Dockerfile  README.md  pyproject.toml
ai-services/triage-service/tests/: test_api.py  test_ml_models.py  test_rules.py
ai-services/triage-service/triage_service/: app.py  ml_models.py  reason_codes.py  rules.py  schemas.py
backend/: README.md  pom.xml
backend/api/: Dockerfile  pom.xml
docs/: README.md
docs/ai/: responsible-ai-statement.md
docs/api/: ai-triage.md  document-intelligence.md  integration-apis.md  policy-claims-workflow.md  rag-assistant.md  security-audit-governance.md
docs/api/collections/: phase-10-integration-apis.http
docs/architecture/: service-architecture.md  system-context.md
docs/data/: data-dictionary.md  synthetic-data-generation.md
docs/demo/: demo-script.md  interview-talking-points.md  recruiter-walkthrough.md  screenshot-checklist.md
docs/deployment/: cloud-deployment.md
docs/domain/: insurance-glossary.md
docs/frontend/: adjuster-workbench.md
docs/ml/: fraud-risk-model-card.md  model-training.md  severity-model-card.md
docs/portfolio/: project-narrative.md  resume-bullets.md
docs/product/: dynamic-claims-application-roadmap.md
docs/quality/: testing-quality-observability.md
docs/superpowers/plans/: 2026-06-24-insureflow-ai-master-build-plan.md  2026-06-24-phase-0-1-repository-and-domain-foundation.md  2026-06-24-phase-2-synthetic-data-generator.md  2026-06-25-phase-3-4-policy-and-claims-workflow.md  2026-06-25-phase-5-rule-based-ai-triage-service.md  2026-06-25-phase-6-ml-triage-model-training.md  2026-06-26-phase-10-guidewire-integration-apis.md  2026-06-26-phase-7-llm-document-intelligence.md  2026-06-26-phase-8-rag-adjuster-assistant.md  2026-06-26-phase-9-adjuster-workbench-frontend.md  2026-06-28-phase-11-security-audit-governance.md  2026-06-28-phase-12-cloud-deployment.md  2026-06-29-phase-13-testing-quality-observability.md  (+8 more)
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  demoData.ts  main.ts  router.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/test/: App.spec.ts  (+1 more)
infra/azure/: main.bicep  main.parameters.example.json
ml/: README.md  pyproject.toml
ml/insureflow_ml/: __init__.py  artifacts.py  features.py  train.py  training.py
ml/tests/: conftest.py  test_artifacts.py  test_features.py  test_training.py
monitoring/prometheus/: prometheus.yml
scripts/: demo-readiness-check.sh  generate-demo-data.sh  load-smoke-test.sh  run-coverage.sh  run-quality-gates.sh  run-tests.sh  smoke-test-containers.sh
synthetic-data-generator/: README.md  pyproject.toml
synthetic-data-generator/generator/: __init__.py  __main__.py  cli.py  config.py  documents.py  generate.py  models.py  reference_data.py  rules.py  writer.py
synthetic-data-generator/tests/: test_cli.py  test_generation_integrity.py  test_label_rules.py  test_writer.py
(+188 files in other folders)
