[project]
name = "insureflow-ml"
version = "0.1.0"
description = "ML training utilities for InsureFlow AI triage models"
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.4.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
