[project]
name = "insureflow-ml"
version = "0.1.0"
description = "ML training utilities for InsureFlow AI triage models"
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.4.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["insureflow_ml*"]
exclude = ["artifacts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Setting the shape on a NumPy array has been deprecated in NumPy 2.5:DeprecationWarning:joblib.numpy_pickle",
]
