[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insureflow-synthetic-data-generator"
version = "0.1.0"
description = "Synthetic P&C insurance data generator for InsureFlow AI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
include = ["generator*"]
