[project]
name = "insureflow-triage-service"
version = "0.1.0"
description = "Rule-based AI triage service for InsureFlow AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "joblib>=1.4.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "scikit-learn>=1.5.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Setting the shape on a NumPy array has been deprecated in NumPy 2.5:DeprecationWarning:joblib.numpy_pickle",
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
